Adjust img relative path

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       d="M100 350 A 100 100 0 0 1 200 150
                         M200 150 200 125 225 150 200 175Z"/>
               </svg> -->
-              <img src="/assets/img/dotLineArrow.png" alt="" class="dotLineArrow">
+              <img src="assets/img/dotLineArrow.png" alt="" class="dotLineArrow">
               <!-- <a href="#">
                 <span class="right"></span>
               </a> -->
@@ -105,7 +105,7 @@
           </g>
         </svg>
       </section>
-      <div class="customerServiceButton"><img src="/assets/img/CustomerService.png" alt=""><br>聯繫客服</div>
+      <div class="customerServiceButton"><img src="assets/img/CustomerService.png" alt=""><br>聯繫客服</div>
 
       <section id="features" class="features">
         <div class="container">
@@ -122,31 +122,31 @@
           <ul class="nav featuresItemContainer">
             <li>
               <a class="icon-box" href="#tab-1">
-                <img src="/assets/img/introDns.png" alt="">
+                <img src="assets/img/introDns.png" alt="">
                 <h4>智能DNS</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <img src="/assets/img/introNs.png" alt="">
+                <img src="assets/img/introNs.png" alt="">
                 <h4>NS託管</h4>
               </a>
             </li>
             <li>
               <a class="featuresCnameItemA" href="#tab-1">
-                <img class="featuresCnameItemImg" src="/assets/img/introCname.png" alt="">
+                <img class="featuresCnameItemImg" src="assets/img/introCname.png" alt="">
                 <h4>CNAME託管</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <img src="/assets/img/introMonitor.png" alt="">
+                <img src="assets/img/introMonitor.png" alt="">
                 <h4>Monitor</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <img src="/assets/img/introSafe.png" alt="">
+                <img src="assets/img/introSafe.png" alt="">
                 <h4>安全防護</h4>
               </a>
             </li>
@@ -235,7 +235,7 @@
 
       <section class="cooperation">
         <div class="container">
-          <img src="/assets/img/cooperation/curveLine.png" alt="">
+          <img src="assets/img/cooperation/curveLine.png" alt="">
           <div class="cooperationContent carousel slide" data-ride="carousel">
             <div class="galleryNavContainer"></div>
 
