Adjust services section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/carousel.css" rel="stylesheet">
+    <link href="assets/css/servicesCarousel.css" rel="stylesheet">
     <link href="assets/css/carousel1.css" rel="stylesheet">
     <link href="assets/vendor/fontAwesome/css/all.css" rel="stylesheet">
   </head>
@@ -154,80 +154,73 @@
         </div>
       </section>
 
-      <section id="services" class="services">
-        <div class="">
-  
-          <!-- <div class="section-title" data-aos="zoom-out">
-            <h2>Services</h2>
-            <p>What we do offer</p>
-          </div> -->
-          <div class="sectionTitleDiv">
-            <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">產品專業</h1>
-            <hr>
-          </div>
+      <section class="services">
+        <div class="sectionTitleDiv">
+          <div class="sectionTitle">LEACLOUD</div>
+          <h1 class="sectionSubTitle">產品專業</h1>
+          <hr>
+        </div>
 
-          <div class="gallery">
-            <div class="gallery-container">
-              <div class="gallery-item">
-                <div class="gallery-item-content item1">
-                  <h3>文字文字</h3>
-                  <img class="" src="assets/img/productAdventanges1.png">
-                </div>
-                <p>
-                  文字文字文字文字文字文字文字文字文字文字文字文
-                  字文字文字文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字文字
-                </p>
+        <div class="gallery">
+          <div class="gallery-container">
+            <div class="gallery-item">
+              <div class="gallery-item-content item1">
+                <h3>文字文字</h3>
+                <img class="" src="assets/img/productAdventanges1.png">
               </div>
-              <div class="gallery-item">
-                <div class="gallery-item-content item2">
-                  <h3>文字文字</h3>
-                  <img class="" src="assets/img/productAdventanges2.png">
-                </div>
-                <p>
-                  文字文字文字文字文字文字文字文字文字文字文字文
-                  字文字文字文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字文字
-                </p>
+              <p>
+                文字文字文字文字文字文字文字文字文字文字文字文
+                字文字文字文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字文字
+              </p>
+            </div>
+            <div class="gallery-item">
+              <div class="gallery-item-content item2">
+                <h3>文字文字</h3>
+                <img class="" src="assets/img/productAdventanges2.png">
               </div>
-              <div class="gallery-item">
-                <div class="gallery-item-content item3">
-                  <h3>文字文字</h3>
-                  <img class="" src="assets/img/productAdventanges3.png">
-                </div>
-                <p>
-                  文字文字文字文字文字文字文字文字文字文字文字文
-                  字文字文字文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字文字
-                </p>
+              <p>
+                文字文字文字文字文字文字文字文字文字文字文字文
+                字文字文字文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字文字
+              </p>
+            </div>
+            <div class="gallery-item">
+              <div class="gallery-item-content item3">
+                <h3>文字文字</h3>
+                <img class="" src="assets/img/productAdventanges3.png">
               </div>
-              <div class="gallery-item">
-                <div class="gallery-item-content item4">
-                  <h3>文字文字</h3>
-                  <img class="" src="assets/img/productAdventanges4.png">
-                </div>
-                <p>
-                  文字文字文字文字文字文字文字文字文字文字文字文
-                  字文字文字文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字文字
-                </p>
+              <p>
+                文字文字文字文字文字文字文字文字文字文字文字文
+                字文字文字文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字文字
+              </p>
+            </div>
+            <div class="gallery-item">
+              <div class="gallery-item-content item4">
+                <h3>文字文字</h3>
+                <img class="" src="assets/img/productAdventanges4.png">
               </div>
-              <div class="gallery-item">
-                <div class="gallery-item-content item5">
-                  <h3>文字文字</h3>
-                  <img class="" src="assets/img/productAdventanges5.png">
-                </div>
-                <p>
-                  文字文字文字文字文字文字文字文字文字文字文字文
-                  字文字文字文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字文字
-                </p>
+              <p>
+                文字文字文字文字文字文字文字文字文字文字文字文
+                字文字文字文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字文字
+              </p>
+            </div>
+            <div class="gallery-item">
+              <div class="gallery-item-content item5">
+                <h3>文字文字</h3>
+                <img class="" src="assets/img/productAdventanges5.png">
               </div>
-              <div class="gallery-controls">
-                <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous" id="servicesControlPre"></i>
-                <i class="fas fa-arrow-circle-right controlButton gallery-controls-next" id="servicesControlNex"></i>
-              </div>
+              <p>
+                文字文字文字文字文字文字文字文字文字文字文字文
+                字文字文字文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字文字
+              </p>
+            </div>
+            <div class="gallery-controls">
+              <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous" id="servicesControlPre"></i>
+              <i class="fas fa-arrow-circle-right controlButton gallery-controls-next" id="servicesControlNex"></i>
             </div>
           </div>
         </div>
