--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
           <div class="row gy-4" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
+                <span class="featured"><i class="fas fa-star star"></i></span>
                 <h3>STANDARD</h3>
                 <div class="price">Free</div>
                 <ul>
@@ -417,9 +418,9 @@
               </div>
             </div>
   
-            <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="200">
+            <div class="col-lg-4 col-md-6 pricingBoxCotent onHover" data-aos="zoom-in" data-aos-delay="200">
               <div class="box">
-                <span class="featured">&nbsp</span>
+                <span class="featured onDisplay"><i class="fas fa-star star"></i></span>
                 <h3>PROFESSIONAL</h3>
                 <div class="price">300<sub>$</sub><span> / mo</span></div>
                 <ul>
@@ -436,6 +437,7 @@
   
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="300">
               <div class="box">
+                <span class="featured"><i class="fas fa-star star"></i></span>
                 <h3>BUSINESS</h3>
                 <div class="price">899<sub>$</sub><span> / mo</span></div>
                 <ul>
