Adjust contact section

--- a/index.html
+++ b/index.html
@@ -487,15 +487,15 @@
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="form-group mt-3">
                   <input type="text" class="form-control" name="name" id="name" placeholder="名字" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
+                  <i class="far fa-user "></i>
                 </div>
                 <div class="form-group mt-3">
                   <input type="text" class="form-control" name="email" id="email" placeholder="信箱" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
+                  <i class="fas fa-envelope"></i>
                 </div>
                 <div class="form-group mt-3">
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="留言"></textarea>
-                  <div class="validate"></div>
+                  <i class="fas fa-comment-alt"></i>
                 </div>
                 <div class="mb-3">
                   <div class="loading">Loading</div>
