Adjsut footer section

--- a/index.html
+++ b/index.html
@@ -518,33 +518,33 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="aboutUs" />
             <h4>關於我們</h4>
-            <div><a href="#">LeaCloud團隊</a></div>
-            <div><a href="#">力雲科技</a></div>
-            <div><a href="#">公司資訊</a></div>
+            <div class="a-Interval"><a href="#">LeaCloud團隊</a></div>
+            <div class="a-Interval"><a href="#">力雲科技</a></div>
+            <div class="a-Interval"><a href="#">公司資訊</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="helpCenter" />
             <h4>幫助中心</h4>
-            <div><a href="#">聯繫客服</a></div>
-            <div><a href="#">創建帳戶</a></div>
-            <div><a href="#">網站使用方式</a></div>
+            <div class="a-Interval"><a href="#">聯繫客服</a></div>
+            <div class="a-Interval"><a href="#">創建帳戶</a></div>
+            <div class="a-Interval"><a href="#">網站使用方式</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="toolsInfo" />
             <h4>工具資訊</h4>
-            <div><a href="#">隱私權政策</a></div>
-            <div><a href="#">CDN比較</a></div>
-            <div><a href="#">Cookie政策</a></div>
+            <div class="a-Interval"><a href="#">隱私權政策</a></div>
+            <div class="a-Interval"><a href="#">CDN比較</a></div>
+            <div class="a-Interval"><a href="#">Cookie政策</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
             <h4>聯絡資訊</h4>
-            <div><a href="#">Taipei, Taiwan</a></div>
-            <div><a href="#">+886 966-625-710</a></div>
-            <div><a href="#">sales@leacloud.com</a></div>
+            <div class="a-Interval"><a href="#">Taipei, Taiwan</a></div>
+            <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
+            <div class="a-Interval"><a href="#">sales@leacloud.com</a></div>
           </div>
         </footer>
     </main>
