Adjust services carousel item width

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/servicesCarousel.css" rel="stylesheet">
-    <link href="assets/css/carousel1.css" rel="stylesheet">
+    <link href="assets/css/cooperationCarousel.css" rel="stylesheet">
     <link href="assets/vendor/fontAwesome/css/all.css" rel="stylesheet">
   </head>
   
@@ -557,8 +557,8 @@
     <script src="assets/vendor/OrbitControls.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/carousel.js"></script>
-    <script src="assets/js/carousel1.js"></script>
+    <script src="assets/js/servicesCarousel.js"></script>
+    <script src="assets/js/cooperationCarousel.js"></script>
     <!-- <script src="assets/js/globe.js"></script> -->
     <script src="assets/js/globe1.js"></script>
     <script>
