Adjusting cooperation section RWD

--- a/index.html
+++ b/index.html
@@ -227,18 +227,10 @@
       </section>
 
       <section class="cooperation">
-        <div class="container">
-          <img src="assets/img/cooperation/curveLine.png" alt="">
-          <div class="cooperationContent carousel slide" data-ride="carousel">
+        <div class="cooperationContainer">
+          <img class="curveLineImg" src="assets/img/cooperation/curveLine.png" alt="">
+          <div class="cooperationContent">
             <div class="galleryNavContainer"></div>
-
-            <!-- <ol class="galleryNavContainer carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            </ol> -->
 
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
@@ -251,7 +243,7 @@
                 文字文字文字文字文字文字文字文字文字
               </div>
             </div>
-            <div class="cooperationCarousel">
+            <!-- <div class="cooperationCarousel">
               <div class="gallery">
                 <div class="galleryCooperationContainer">
                   <div class="galleryCooperationItem">
@@ -264,7 +256,7 @@
                       </p>
                     </div>
                     
-                    <div class="galleryCooperationItemContent alignItemCenter">
+                    <div class="galleryCooperationItemContent">
                       <img src="assets/img/cooperation/company1.png" alt="">
                       <div class="companyInfo">
                         <h5 class="positionTitle">職位名稱</h5>
@@ -354,7 +346,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="vertical"></div>
         </div>
