adjust banner rwd

--- a/index.html
+++ b/index.html
@@ -45,37 +45,13 @@
           </nav>
           <img class="navMenuImg" src="assets/img/headerList.png" alt="">
         </div>
-
-        <!-- <div class="mobile-ul">
-          <nav class="nav-menu headerList">
-            <ul>
-              <li class="headerList-li"><a href="#">登入</a></li>
-              <li class="headerList-li"><a href="#">註冊</a></li>
-            </ul>
-          </nav>
-          <img class="navMenuImg" src="assets/img/headerList.png" alt="">
-        </div> -->
-
-        <!-- <nav class="nav-menu  d-lg-block headerList">
-          <ul>
-            <li class="headerList-li"><a href="#">登入</a></li>
-            <li class="headerList-li"><a href="#">註冊</a></li>
-            <li class="headerList-li drop-down"><a>語言選擇</a>
-              <ul>
-                <li><a href="#">EN</a></li>
-                <li><a href="#">繁體中文</a></li>
-              </ul>
-            </li>
-            <li class="headerList-li"><a href="#">聯繫我們</a></li>
-          </ul>
-          <img src="assets/img/headerList.png" alt="">
-        </nav> -->
       </div>
     </header>
 
     <main id="main">
-      <section id="hero" class="d-flex flex-column justify-content-end align-items-center">
-        <div id="heroCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
+      <!-- <section id="banner" class="d-flex flex-column justify-content-end align-items-center"> -->
+      <section id="banner">
+        <div class="bannerContainer">
           <div class="bannerContent">
             <h1 class="bannerContentTitle">網路拉近世界距離</h1>
             <h2 class="bannerContentSubTitle">Leacloud打通你我距離</h2>
@@ -95,10 +71,9 @@
               </a>
             </div>
           </div>
-  
         </div>
       
-        <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
+        <svg class="banner-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
           <defs>
             <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
           </defs>
