Adjust detail section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,46 @@
           </g>
         </svg>
       </section>
+
+      
+      <section class="detail">
+        <div class="col-lg-12 col-md-12 interval closebutton">
+          <img src="assets/img/detailListClose.png">
+        </div>
+
+        <div class="detailContainer" >
+          <div class="col-lg-2 col-md-12 interval detailColumn">
+            <h2>產品</h2>
+            <hr/>
+            <div class="a-Interval"><a href="#">內容分發網絡</a></div>
+            <div class="a-Interval"><a href="#">域名解析</a></div>
+            <div class="a-Interval"><a href="#">域名跳轉</a></div>
+            <div class="a-Interval"><a href="#">影音串流加速</a></div>
+          </div>
+
+          <div class="col-lg-2 col-md-12 interval detailColumn">
+            <h2>服務</h2>
+            <hr/>
+            <div class="a-Interval"><a href="#">企業辦公</a></div>
+            <div class="a-Interval"><a href="#">資訊安全</a></div>
+            <div class="a-Interval"><a href="#">簡訊代發</a></div>
+            <div class="a-Interval"><a href="#">備案域名</a></div>
+          </div>
+
+          <div class="col-lg-2 col-md-12 detailColumn">
+            <h2>定價</h2>
+            <hr/>
+            <div class="a-Interval"><a href="#">產品服務價格</a></div>
+          </div>
+        </div>
+
+        <div class="detailButtons">
+          <div class="detailButton">聯繫客服</div>
+          <div class="detailButton">搶先註冊</div>
+        </div>
+      </section>
+
+
       <div class="customerServiceButton"><img src="assets/img/CustomerService.png" alt=""><br>聯繫客服</div>
 
       <section id="features" class="features">
@@ -515,7 +555,8 @@
             <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
             <div class="a-Interval"><a href="#">sales@leacloud.com</a></div>
           </div>
-        </footer>
+        </div>
+      </footer>
     </main>
     
     <!-- Vendor JS Files -->
