Adjust detail section show and hidden

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
       
       <section class="detail">
-        <div class="col-lg-12 col-md-12 interval closebutton">
-          <img src="assets/img/detailListClose.png">
+        <div class="col-lg-12 col-md-12 closebutton">
+          <img src="assets/img/detailListClose.png" id="detailCloseBtn">
         </div>
 
         <div class="detailContainer" >
