Adjust detail section opacity

--- a/index.html
+++ b/index.html
@@ -87,36 +87,39 @@
           <img src="assets/img/detailListClose.png" id="detailCloseBtn">
         </div>
 
-        <div class="detailContainer" >
-          <div class="col-lg-2 col-md-12 interval detailColumn">
-            <h2>產品</h2>
-            <hr/>
-            <div class="a-Interval"><a href="#">內容分發網絡</a></div>
-            <div class="a-Interval"><a href="#">域名解析</a></div>
-            <div class="a-Interval"><a href="#">域名跳轉</a></div>
-            <div class="a-Interval"><a href="#">影音串流加速</a></div>
+        <div class="content">
+          <div class="detailContainer" >
+            <div class="col-lg-2 col-md-12 interval detailColumn">
+              <h2>產品</h2>
+              <hr/>
+              <div class="a-Interval"><a href="#">內容分發網絡</a></div>
+              <div class="a-Interval"><a href="#">域名解析</a></div>
+              <div class="a-Interval"><a href="#">域名跳轉</a></div>
+              <div class="a-Interval"><a href="#">影音串流加速</a></div>
+            </div>
+  
+            <div class="col-lg-2 col-md-12 interval detailColumn">
+              <h2>服務</h2>
+              <hr/>
+              <div class="a-Interval"><a href="#">企業辦公</a></div>
+              <div class="a-Interval"><a href="#">資訊安全</a></div>
+              <div class="a-Interval"><a href="#">簡訊代發</a></div>
+              <div class="a-Interval"><a href="#">備案域名</a></div>
+            </div>
+  
+            <div class="col-lg-2 col-md-12 detailColumn">
+              <h2>定價</h2>
+              <hr/>
+              <div class="a-Interval"><a href="#">產品服務價格</a></div>
+            </div>
           </div>
-
-          <div class="col-lg-2 col-md-12 interval detailColumn">
-            <h2>服務</h2>
-            <hr/>
-            <div class="a-Interval"><a href="#">企業辦公</a></div>
-            <div class="a-Interval"><a href="#">資訊安全</a></div>
-            <div class="a-Interval"><a href="#">簡訊代發</a></div>
-            <div class="a-Interval"><a href="#">備案域名</a></div>
-          </div>
-
-          <div class="col-lg-2 col-md-12 detailColumn">
-            <h2>定價</h2>
-            <hr/>
-            <div class="a-Interval"><a href="#">產品服務價格</a></div>
+  
+          <div class="detailButtons">
+            <div class="detailButton">聯繫客服</div>
+            <div class="detailButton">搶先註冊</div>
           </div>
         </div>
-
-        <div class="detailButtons">
-          <div class="detailButton">聯繫客服</div>
-          <div class="detailButton">搶先註冊</div>
-        </div>
+        
       </section>
 
 
