Adjust contact to telegram and skype

--- a/index.html
+++ b/index.html
@@ -479,15 +479,19 @@
               </div>
 
               <div class="info">
-                <div class="email">
+                <div class="item">
                   <i class="fas fa-envelope"></i>
                   <p>sales@leacloud.com</p>
                 </div>
-                <div class="address">
-                  <i class="fas fa-map-marker-alt"></i>
-                  <p>Taipei, Taiwan</p>
+                <div class="item">
+                  <i class="fab fa-telegram-plane"></i>
+                  <a href="https://telegram.me/leacloud" target="_blank">Telegram</a>
                 </div>
-                <div class="phone">
+                <div class="item">
+                  <i class="fab fa-skype"></i>
+                  <a href="skype:live:.cid.36d196aca11d6650?call">Skype</a>
+                </div>
+                <div class="item">
                   <i class="fas fa-headset"></i>
                   <p>線上客服</p>
                 </div>
@@ -554,7 +558,7 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
             <h4>聯絡資訊</h4>
-            <div class="a-Interval"><a href="#">Taipei, Taiwan</a></div>
+            <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank">Telegram</a></div>
             <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
             <div class="a-Interval"><a href="#">sales@leacloud.com</a></div>
           </div>
