--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </section>
 
 
-      <div class="customerServiceButton"><img src="assets/img/CustomerService.png" alt=""><br>聯繫客服</div>
+      <div class="customerServiceButton"><i class="fas fa-comments"></i><br>聯繫客服</div>
 
       <section id="features" class="features">
         <div class="container">
@@ -595,7 +595,8 @@
         </div>
       </footer>
     </main>
-    
+    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></i></a>
+
     <!-- Vendor JS Files -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/617753/ThreeOrbitControls.js'></script>
