Adjust globe section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/globe.css" rel="stylesheet">
+    <link href="assets/css/globeDots.css" rel="stylesheet">
     <link href="assets/css/servicesCarousel.css" rel="stylesheet">
     <link href="assets/css/cooperationCarousel.css" rel="stylesheet">
     <link href="assets/vendor/fontAwesome/css/all.css" rel="stylesheet">
@@ -615,7 +615,7 @@
     <script src="assets/js/changeLanguage.js"></script>
     <!-- <script src="assets/js/globe.js"></script> -->
     <!-- <script src="assets/js/globe1.js"></script> -->
-    <script src="assets/js/globe2.js"></script>
+    <script src="assets/js/globeDots.js"></script>
     <script>
 			// var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 			// if (isMobile) {
