Adjust to renew globe section

--- a/index.html
+++ b/index.html
@@ -130,13 +130,11 @@
         <div class="container">
           <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">關於力雲科技</h1>
+            <h1 class="sectionSubTitle">關於Leacloud力雲科技</h1>
             <hr>
           </div>
           <p>
-            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字<br>
-            文字文字文字文字文字文字文字文字文字文字文字文字文字文字<br>
-            文字文字文字文字文字文字文字
+            LeaCloud力雲科技長期活躍於北美及中國地區。<br>憑藉專業技術團隊於網路產業多年來的開發經驗，深耕於亞太地區，<br>致力於協助客戶經由網路將其事業推展至與全球接軌，並以與客戶共同創造最大效益為經營宗旨。
           </p>
           <ul class="nav featuresItemContainer">
             <li>
@@ -378,7 +376,7 @@
           <!-- <div id="globeSection" class="col-lg-6"></div> -->
           <div class="col-lg-6 globeDotsSection">
             <div class="globeDots js-globe">
-              <div class="svg-wrapper">
+              <!-- <div class="svg-wrapper">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 984 984" width="984" height="984" style="enable-background:new 0 0 984 984;" xml:space="preserve">
                   <style type="text/css">
@@ -400,8 +398,8 @@
                       c6-30.3,8.9-61.2,8.9-92H966z"/>
                   </g>
                 </svg>
-              </div>
-              <!-- <ul class="globe-list js-list"></ul> -->
+              </div> -->
+              <ul class="globe-list js-list"></ul>
               <canvas class="globe-canvas js-canvas"></canvas>
             </div>
           </div>
@@ -412,12 +410,7 @@
               <hr/>
             </div>
             <p>
-              文字文字文字文字文字文字文字文字文字文字文字文
-              字文字文字文字文字文字文字文字文字文字文字文字
-              文字文字文字文字文字文字文字文字文字文字<br>
-              文字文字文字文字文字文字文字文字文字文字文字文
-              字文字文字文字文字文字文字文字文字文字文字文字
-              文字文字文字文字文字文字文字文字文字文字
+              LeaCloudCDN在中國大陸中國多個省份城市、台灣、日本、南韓、香港、菲律賓、越南、泰國、新加坡、印尼、馬來西亞、印度、歐洲、北美等均有專屬節點及專線，讓您的網站及各項服務暢行無阻。
             </p>
           </div>
         </div>
@@ -447,12 +440,12 @@
                 <h3>STANDARD</h3>
                 <div class="price">Free</div>
                 <ul>
-                  <li>根域名 10</li>
+                  <li>域名 1</li>
                   <li>免費廣域憑證 1</li>
-                  <li>域名紀錄 100</li>
+                  <!-- <li>域名紀錄 100</li> -->
                   <li>域名請求次數 50,000,000</li>
-                  <li>頻寬限制 512/kbps</li>
-                  <li>網路流量 500GB</li>
+                  <li>頻寬限制 216Kbps</li>
+                  <!-- <li>網路流量 500GB</li> -->
                   <!-- <li class="na">Pharetra massa</li>
                   <li class="na">Massa ultricies mi</li> -->
                 </ul>
@@ -466,12 +459,12 @@
                 <h3>PROFESSIONAL</h3>
                 <div class="price">300<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>根域名 30</li>
-                  <li>免費廣域憑證 1</li>
-                  <li>域名紀錄 1000</li>
+                  <li>根域名 10</li>
+                  <li>免費廣域憑證 10</li>
+                  <!-- <li>域名紀錄 1000</li> -->
                   <li>域名請求次數 50,000,000</li>
-                  <li>頻寬限制 10/kbps</li>
-                  <li>網路流量 500GB</li>
+                  <li>頻寬限制 10Mbps</li>
+                  <!-- <li>網路流量 500GB</li> -->
                 </ul>
                 <a href="#" class="btn-buy">立即訂購</a>
               </div>
@@ -483,12 +476,12 @@
                 <h3>BUSINESS</h3>
                 <div class="price">899<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>根域名 300</li>
+                  <li>根域名 100</li>
                   <li>免費廣域憑證 1</li>
-                  <li>域名紀錄 1000</li>
+                  <!-- <li>域名紀錄 1000</li> -->
                   <li>域名請求次數 50,000,000</li>
-                  <li>頻寬限制 20/kbps</li>
-                  <li>網路流量 500GB</li>
+                  <li>頻寬限制 30Mbps</li>
+                  <!-- <li>網路流量 500GB</li> -->
                 </ul>
                 <a href="#" class="btn-buy">搶先訂購</a>
               </div>
@@ -598,7 +591,7 @@
     <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></i></a>
 
     <!-- Vendor JS Files -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r117/three.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/617753/ThreeOrbitControls.js'></script>
     <script src='https://rawgit.com/spite/THREE.MeshLine/master/src/THREE.MeshLine.js'></script>
 
