Adjust skype link from call to chat

--- a/index.html
+++ b/index.html
@@ -461,10 +461,10 @@
                 <ul>
                   <li>根域名 10</li>
                   <li>免費廣域憑證 10</li>
-                  <!-- <li>域名紀錄 1000</li> -->
+                  <li>域名紀錄 1000</li>
                   <li>域名請求次數 50,000,000</li>
                   <li>頻寬限制 10Mbps</li>
-                  <!-- <li>網路流量 500GB</li> -->
+                  <li>網路流量 500GB</li>
                 </ul>
                 <a href="#" class="btn-buy">立即訂購</a>
               </div>
@@ -512,7 +512,7 @@
                 </div>
                 <div class="item">
                   <i class="fab fa-skype"></i>
-                  <a href="skype:live:.cid.36d196aca11d6650?call">Skype</a>
+                  <a href="skype:live:.cid.36d196aca11d6650?chat">Skype</a>
                 </div>
                 <div class="item">
                   <i class="fas fa-headset"></i>
