Adjust pricing text

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <h1 class="sectionSubTitle">選擇適合您的方案</h1>
             <hr>
           </div>
-          <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+          <p>您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p>
           <div class="row gy-4" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
@@ -441,13 +441,12 @@
                 <div class="price">Free</div>
                 <ul>
                   <li>域名 1</li>
-                  <li>免費廣域憑證 1</li>
-                  <!-- <li>域名紀錄 100</li> -->
-                  <li>域名請求次數 50,000,000</li>
+                  <li>免費SSL憑證 1</li>
                   <li>頻寬限制 216Kbps</li>
-                  <!-- <li>網路流量 500GB</li> -->
-                  <!-- <li class="na">Pharetra massa</li>
-                  <li class="na">Massa ultricies mi</li> -->
+                  <li>訪問過濾功能</li>
+                  <li>自動監控圖表</li>
+                  <li>LeaDNS</li>
+                  <li>客戶服務5x8</li>
                 </ul>
                 <a href="#" class="btn-buy">立即試用</a>
               </div>
@@ -459,12 +458,13 @@
                 <h3>PROFESSIONAL</h3>
                 <div class="price">300<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>根域名 10</li>
-                  <li>免費廣域憑證 10</li>
-                  <li>域名紀錄 1000</li>
-                  <li>域名請求次數 50,000,000</li>
+                  <li>域名 10</li>
+                  <li>免費SSL憑證 10</li>
                   <li>頻寬限制 10Mbps</li>
-                  <li>網路流量 500GB</li>
+                  <li>訪問過濾功能</li>
+                  <li>自動監控圖表</li>
+                  <li>LeaDNS</li>
+                  <li>客戶服務7x24</li>
                 </ul>
                 <a href="#" class="btn-buy">立即訂購</a>
               </div>
@@ -474,14 +474,15 @@
               <div class="box">
                 <span class="featured"><i class="fas fa-star star"></i></span>
                 <h3>BUSINESS</h3>
-                <div class="price">899<sub>$</sub><span> / mo</span></div>
+                <div class="price">2499<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>根域名 100</li>
-                  <li>免費廣域憑證 1</li>
-                  <!-- <li>域名紀錄 1000</li> -->
-                  <li>域名請求次數 50,000,000</li>
-                  <li>頻寬限制 30Mbps</li>
-                  <!-- <li>網路流量 500GB</li> -->
+                  <li>域名 100</li>
+                  <li>免費SSL憑證 100</li>
+                  <li>頻寬限制 100Mbps</li>
+                  <li>訪問過濾功能</li>
+                  <li>自動監控圖表</li>
+                  <li>LeaDNS</li>
+                  <li>客戶服務7x24</li>
                 </ul>
                 <a href="#" class="btn-buy">搶先訂購</a>
               </div>
