Adjust for uiux

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <hr/>
             </div>
             <p>
-              LeaCloudCDN在中國大陸多個省份城市、台灣、日本、南韓、香港、菲律賓、越南、泰國、新加坡、印尼、馬來西亞、印度、歐洲、北美等均有專屬節點及專線，讓您的網站及各項服務暢行無阻。
+              LeaCloudCDN在中國大陸多個省份城市、台灣、日本、南韓、香港、菲律賓、越南、泰國、新加坡、印尼、馬來西亞、印度、歐洲、北美等<br>均有專屬節點及專線，讓您的網站及各項服務暢行無阻。
             </p>
           </div>
         </div>
