Adjust detail section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <ul>
               <li class="headerList-li"><a href="#" id="login">登入</a></li>
               <li class="headerList-li"><a href="#" id="logup">註冊</a></li>
+              <li class="headerList-li navMenuImg"><a href="#">解決方案</a></li>
               <li class="headerList-li drop-down"><a>語言選擇</a>
                 <ul>
                   <div class="triangle"></div>
@@ -43,7 +44,7 @@
               <li class="headerList-li"><a href="#">聯繫我們</a></li>
             </ul>
           </nav>
-          <img class="navMenuImg" src="assets/img/headerList.png" alt="">
+          <!-- <img class="navMenuImg" src="assets/img/headerList.png" alt=""> -->
         </div>
       </div>
     </header>
