Adjust footer section

--- a/index.html
+++ b/index.html
@@ -571,15 +571,15 @@
             <h4>幫助中心</h4>
             <div class="a-Interval"><a href="#">聯繫客服</a></div>
             <div class="a-Interval"><a href="#">創建帳戶</a></div>
-            <div class="a-Interval"><a href="#">網站使用方式</a></div>
+            <div class="a-Interval"><a href="#">合作方式</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="toolsInfo" />
             <h4>工具資訊</h4>
             <div class="a-Interval"><a href="#">隱私權政策</a></div>
-            <div class="a-Interval"><a href="#">CDN比較</a></div>
             <div class="a-Interval"><a href="#">Cookie政策</a></div>
+            <div class="a-Interval"><a href="#">更多工具</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
